syntax = "proto3";

package tari.mempool;

// TODO: Remove duplicate Signature, transaction also has a Signature.
// Define the explicit Signature implementation for the Tari base layer. A different signature scheme can be
// employed by redefining this type.
message Signature {
    bytes public_nonce = 1;
    bytes signature = 2;
}

message StateResponse {
    // List of transactions in unconfirmed pool.
    repeated Signature unconfirmed_pool = 1;
    // List of transactions in reorg pool.
    repeated Signature reorg_pool = 4;
}